--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -10,6 +10,10 @@ section{
   padding: 80px 15%;
 }
 
+.post{
+  border: solid 10px red;
+}
+
 
 
 
@@ -129,12 +133,123 @@ justify-content: center;
 }
 
 .blog-article{
-  margin:0 10px 50px;
-  padding: 5px;
+  margin:0;
+  padding: 2vw;
   border: solid 1px $accent-color;
   background: white;
+  h3{
+    color: $secondary-color;
+  }
+  @include breakpoint(md){
+    margin:80px 10px 50px;
+
+  }
+}
+.article{
+  padding: 0 10%;
+  margin: 0 0 100px;
+  h3{
+    padding-bottom: 1.5em;
+    
+  }
+
+  @include breakpoint(md){
+   width: 80%;
+   margin: 0 auto 100px;
+  }
+
+}
+.blog-date{
+  padding-bottom: 1.5em ;
+  font-size: 14px;
+  color: $primary-color;
+
+  @include breakpoint(md){
+   width: 80%;
+  
+   font-size: 18px;
+   
+  }
 }
 
 .blog-wrap{
   background: $light-color2; flex-wrap: wrap;justify-content: center;
+}
+
+
+.reverse{
+  flex-direction: column-reverse;
+  @include breakpoint(md){
+   flex-direction: row;
+  }
+}
+
+.add-pad{
+  @include breakpoint(md){
+  padding: 60px 10%;
+
+   }
+}
+
+.about-pad{
+  @include breakpoint(md){
+    padding: 0 5%;
+}
+}
+
+label{
+  font-family: $primary-font;
+}
+
+.social-media {
+  h5{
+    margin: 5%;
+    @include breakpoint(md){
+    margin: 0 0 5% 0;
+    
+       }
+
+  }
+
+a{
+margin: 0 10px;
+}
+
+}
+
+
+.social-icon{
+  hover{
+    fill: $accent-color;
+  }
+}
+
+.form-btn{
+padding: .5em 1em;
+background: $primary-color;
+color: white;
+font-family: $primary-font;
+font-weight: 700;
+&:hover{
+  background-color: $secondary-color;
+}
+}
+
+form{
+  text-align: center;
+  
+  div{
+    margin: 1em;
+  }
+  label{
+    font-family: $primary-font;
+    
+  }
+}
+.field{
+  @include breakpoint(md){
+  display: flex;
+  justify-content: space-between;
+  margin-right: 5em;
+}
 }
